# conway-game-of-life

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  codeql-analysis.yml
cmake/: config.cmake  import-imgui.cmake
src/: CMakeLists.txt  Cell.cpp  Cell.h  DeltaTime.cpp  DeltaTime.h  Field.cpp  Field.h  FieldSeeder.cpp  FieldSeeder.h  Main.cpp  Random.cpp  Random.h  Time.cpp  Time.h  Window.cpp  Window.h  main.cpp
src/Commands/: ICommand.h  KillCommand.cpp  KillCommand.h  SpawnCommand.cpp  SpawnCommand.h
src/Renderer/: Camera.cpp  Camera.h  FieldRenderer.cpp  FieldRenderer.h  RenderAPI.cpp  RenderAPI.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/Rules/: IRule.h  KillLessThanTwo.cpp  KillLessThanTwo.h  KillMoreThanThree.cpp  KillMoreThanThree.h  SpawnWithThree.cpp  SpawnWithThree.h
tests/: CMakeLists.txt  FieldTests.cpp
